--- a/index.html
+++ b/index.html
@@ -5,8 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Curso Gratuito</title>
+    
 </head>
 <body>
     <h1>Curso Gratuito De tecnologia</h1>
+
+    <picture>
+        <a href="#"><img src="imagens/thumb-html.png" alt="Curso De HTML E CSS"></a>
+        <a href="#"><img src="imagens/thumb-js.png" alt="Curso De javascipt"></a>
+        <a href="#"><img src="imagens/thumb-hardware.png" alt="Curso de Hardware"></a>
+        <a href="#"><img src="imagens/thumb-python.png" alt="Curso de python"></a>
+    </picture>
 </body>
 </html>
