--- a/paginahtml.html
+++ b/paginahtml.html
@@ -5,8 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Curso de HTML E CSS</title>
+    <style>
+        body{
+            background-color: rgba(0, 0, 0, 0.808);
+            color: blanchedalmond;
+        }
+    </style>
 </head>
 <body>
-    
+    <h1>Curso de HTML e CSS</h1>
+
+    <a href="index.html" target="_self" rel="prev"><img src="imagens/voltar.png" alt="Voltar"></a>
 </body>
 </html>
