--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <h1>Curso Gratuito De tecnologia</h1>
     <picture>
         <a href="paginahtml.html" target="_self" rel="next"><img src="imagens/thumb-html.png" alt="Curso De HTML E CSS"></a>
-        <a href="#"><img src="imagens/thumb-js.png" alt="Curso De javascipt"></a><br>
+        <a href="paginajs.html" target="_self" rel="next"><img src="imagens/thumb-js.png" alt="Curso De javascipt"></a><br>
         <a href="#"><img src="imagens/thumb-hardware.png" alt="Curso de Hardware"></a>
         <a href="#"><img src="imagens/thumb-python.png" alt="Curso de python"></a>
     </picture>
