--- a/paginahtml.html
+++ b/paginahtml.html
@@ -8,13 +8,14 @@
     <style>
         body{
             background-color: rgba(0, 0, 0, 0.808);
-            color: blanchedalmond;
+            color: burlywood;
         }
     </style>
 </head>
 <body>
     <h1>Curso de HTML e CSS</h1>
-
+    <!--Video Do youtube-->
+    <p><a href="#">Playlist do curso!</a></p>
     <a href="index.html" target="_self" rel="prev"><img src="imagens/voltar.png" alt="Voltar"></a>
 </body>
 </html>
