--- a/paginajs.html
+++ b/paginajs.html
@@ -1,15 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Curso de JS</title>
+    <style>
+        body{
+            background-color: rgba(0, 0, 0, 0.796);
+            color: burlywood;
+        }
+    </style>
 </head>
 <body>
     <h1>Curso De Javascript</h1>
-
+    <!--Video Do youtube-->
     <p>Acessa a playlist!</p>
-    <a href="index.html" target="_self" rel="prev"></a>
+    <a href="index.html" target="_self" rel="prev"><img src="imagens/voltar.png" alt="Voltar"></a>
 </body>
 </html>
