--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <picture>
         <a href="paginahtml.html" target="_self" rel="next"><img src="imagens/thumb-html.png" alt="Curso De HTML E CSS"></a>
         <a href="paginajs.html" target="_self" rel="next"><img src="imagens/thumb-js.png" alt="Curso De javascipt"></a><br>
-        <a href="#"><img src="imagens/thumb-hardware.png" alt="Curso de Hardware"></a>
+        <a href="paginahardware.html" target="_self" rel="next"><img src="imagens/thumb-hardware.png" alt="Curso de Hardware"></a>
         <a href="#"><img src="imagens/thumb-python.png" alt="Curso de python"></a>
     </picture>
 </body>
