--- a/paginahardware.html
+++ b/paginahardware.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Curso de JS</title>
+    <title>Curso de Hardware</title>
     <style>
         body{
-            background-color: rgba(0, 0, 0, 0.796);
+            background-color: rgba(0, 0, 0, 0.782);
             color: burlywood;
         }
     </style>
 </head>
 <body>
-    <h1>Curso De Javascript</h1>
+    <h1>Curso de Hardware</h1>
     <!--Video Do youtube-->
     <p><a href="#">Acessa a playlist!</a></p>
     <a href="index.html" target="_self" rel="prev"><img src="imagens/voltar.png" alt="Voltar"></a>
