--- a/paginajs.html
+++ b/paginajs.html
@@ -7,8 +7,10 @@
     <title>Curso de JS</title>
     <style>
         body{
-            background-color: rgba(0, 0, 0, 0.796);
-            color: burlywood;
+            background-color: rgba(0, 0, 0, 0.734);
+            }
+        h1{
+            color: blanchedalmond;
         }
     </style>
 </head>
