--- a/paginahardware.html
+++ b/paginahardware.html
@@ -5,10 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Curso de Hardware</title>
+    <link rel="shortcut icon" href="imagens/favicon.ico" type="image/favicon-icon">
     <style>
         body{
-            background-color: rgba(0, 0, 0, 0.782);
-            color: burlywood;
+            background-color: rgba(0, 0, 0, 0.734);
+            }
+        h1{
+            color: blanchedalmond;
         }
     </style>
 </head>
