--- a/paginapython.html
+++ b/paginapython.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Curso de HTML E CSS</title>
+    <title>Curso de Python</title>
     <style>
         body{
             background-color: rgba(0, 0, 0, 0.734);
@@ -15,9 +15,9 @@
     </style>
 </head>
 <body>
-    <h1>Curso de HTML e CSS</h1>
-    <!--Video Do youtube-->
-    <p><a href="#">Playlist do curso!</a></p>
+    <h1>Curso de Python</h1>
+    <!--Video do Youtube-->
+    <p><a href="#">Acesse a playlist</a></p>
     <a href="index.html" target="_self" rel="prev"><img src="imagens/voltar.png" alt="Voltar"></a>
 </body>
 </html>
