--- a/paginajs.html
+++ b/paginajs.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Curso de JS</title>
+    <link rel="shortcut icon" href="imagens/favicon.ico" type="image/favicon-icon">
     <style>
         body{
             background-color: rgba(0, 0, 0, 0.734);
