--- a/index.html
+++ b/index.html
@@ -9,14 +9,13 @@
     <style>
         body{
             background-color: rgba(0, 0, 0, 0.734);
-            }
-        h1{
             color: blanchedalmond;
-        }
+         }
+        
     </style>
 </head>
 <body>
-    <h1>Curso Gratuito De tecnologia</h1>
+    <h1>Curso Gratuito De Tecnologia</h1>
     <picture>
         <a href="paginahtml.html" target="_self" rel="next"><img src="imagens/thumb-html.png" alt="Curso De HTML E CSS"></a>
         <a href="paginajs.html" target="_self" rel="next"><img src="imagens/thumb-js.png" alt="Curso De javascipt"></a><br>
