--- a/paginahardware.html
+++ b/paginahardware.html
@@ -9,15 +9,15 @@
     <style>
         body{
             background-color: rgba(0, 0, 0, 0.734);
-            }
-        h1{
             color: blanchedalmond;
         }
+
     </style>
 </head>
 <body>
     <h1>Curso de Hardware</h1>
     <!--Video Do youtube-->
+    <img src="imagens/thumb-hardware.png" alt="Imagens do curso">
     <p><a href="#">Acessa a playlist!</a></p>
     <a href="index.html" target="_self" rel="prev"><img src="imagens/voltar.png" alt="Voltar"></a>
 </body>
