--- a/paginahtml.html
+++ b/paginahtml.html
@@ -18,6 +18,7 @@
 <body>
     <h1>Curso de HTML e CSS</h1>
     <!--Video Do youtube-->
+    <img src="imagens/thumb-html.png" alt="Imagen do curso">
     <p><a href="#">Playlist do curso!</a></p>
     <a href="index.html" target="_self" rel="prev"><img src="imagens/voltar.png" alt="Voltar"></a>
 </body>
