--- a/paginajs.html
+++ b/paginajs.html
@@ -18,6 +18,7 @@
 <body>
     <h1>Curso De Javascript</h1>
     <!--Video Do youtube-->
+    <img src="imagens/thumb-js.png" alt="Imagens do Curso">
     <p><a href="#">Acessa a playlist!</a></p>
     <a href="index.html" target="_self" rel="prev"><img src="imagens/voltar.png" alt="Voltar"></a>
 </body>
