--- a/paginapython.html
+++ b/paginapython.html
@@ -18,6 +18,7 @@
 <body>
     <h1>Curso de Python</h1>
     <!--Video do Youtube-->
+    <img src="imagens/thumb-python.png" alt="Imagens do Curso">
     <p><a href="#">Acesse a playlist</a></p>
     <a href="index.html" target="_self" rel="prev"><img src="imagens/voltar.png" alt="Voltar"></a>
 </body>
