--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
         <a href="paginajs.html" target="_self" rel="next"><img src="imagens/thumb-js.png" alt="Curso De javascipt"></a><br>
         <a href="paginahardware.html" target="_self" rel="next"><img src="imagens/thumb-hardware.png" alt="Curso de Hardware"></a>
         <a href="paginapython.html" target="_self" rel="next"><img src="imagens/thumb-python.png" alt="Curso de python"></a>
+        <p>Acesse o Canal dos Curso</p>
+        <p><a href="#">Curso Em Video...</a></p>
     </picture>
 </body>
 </html>
