--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
             background-color: rgba(0, 0, 0, 0.734);
             color: blanchedalmond;
          }
-        
+        a{
+            color: rgb(245, 226, 197);
+        }
     </style>
 </head>
 <body>
@@ -21,8 +23,8 @@
         <a href="paginajs.html" target="_self" rel="next"><img src="imagens/thumb-js.png" alt="Curso De javascipt"></a><br>
         <a href="paginahardware.html" target="_self" rel="next"><img src="imagens/thumb-hardware.png" alt="Curso de Hardware"></a>
         <a href="paginapython.html" target="_self" rel="next"><img src="imagens/thumb-python.png" alt="Curso de python"></a>
-        <p>Acesse o Canal dos Curso</p>
-        <p><a href="#">Curso Em Video...</a></p>
+        <p>Acesse o Canal dos Curso!</p>
+        <p><a href="https://www.youtube.com/user/cursosemvideo" target="_blank" rel="author">Curso Em Video...</a></p>
     </picture>
 </body>
 </html>
