melhorias em CSS

--- a/paginahardware.html
+++ b/paginahardware.html
@@ -11,7 +11,9 @@
             background-color: rgba(0, 0, 0, 0.734);
             color: blanchedalmond;
         }
-
+        a{
+            color: rgb(245, 226, 197);
+        }
     </style>
 </head>
 <body>
