--- a/paginapython.html
+++ b/paginapython.html
@@ -13,6 +13,9 @@
         h1{
             color: blanchedalmond;
         }
+        a{
+            color: rgb(245, 226, 197);
+        }
     </style>
 </head>
 <body>
