--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <a href="paginahardware.html" target="_self" rel="next"><img src="imagens/thumb-hardware.png" alt="Curso de Hardware"></a>
         <a href="paginapython.html" target="_self" rel="next"><img src="imagens/thumb-python.png" alt="Curso de python"></a>
         <p>Acesse o Canal dos Curso!</p>
-        <p><a href="https://www.youtube.com/user/cursosemvideo" target="_blank" rel="author">Curso Em Video...</a></p>
+        <p><a href="https://www.youtube.com/user/cursosemvideo" target="_blank" rel="external">Curso Em Video...</a></p>
     </picture>   
 </body>
 </html>
