--- a/paginapython.html
+++ b/paginapython.html
@@ -20,9 +20,8 @@
 </head>
 <body>
     <h1>Curso de Python</h1>
-    <!--Video do Youtube-->
-    <img src="imagens/thumb-python.png" alt="Imagens do Curso">
-    <p><a href="#">Acesse a playlist</a></p>
+    <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/S9uPNppGsGo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <p><a href="https://www.youtube.com/watch?v=S9uPNppGsGo&t=730s" target="_blank" rel="external">Acesse a playlist</a></p>
     <a href="index.html" target="_self" rel="prev"><img src="imagens/voltar.png" alt="Voltar"></a>
 </body>
 </html>
