--- a/paginahardware.html
+++ b/paginahardware.html
@@ -18,9 +18,8 @@
 </head>
 <body>
     <h1>Curso de Hardware</h1>
-    <!--Video Do youtube-->
-    <img src="imagens/thumb-hardware.png" alt="Imagens do curso">
-    <p><a href="#">Acessa a playlist!</a></p>
+    <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/iT6E92Kt38o" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <p><a href="https://www.youtube.com/watch?v=iT6E92Kt38o&list=PLHz_AreHm4dn1JHgN9wpbIUhzZmycYQXW" target="_blank" rel="external">Acessa a playlist!</a></p>
     <a href="index.html" target="_self" rel="prev"><img src="imagens/voltar.png" alt="Voltar"></a>
 </body>
 </html>
