--- a/paginahtml.html
+++ b/paginahtml.html
@@ -20,9 +20,8 @@
 </head>
 <body>
     <h1>Curso de HTML e CSS</h1>
-    <!--Video Do youtube-->
-    <img src="imagens/thumb-html.png" alt="Imagen do curso">
-    <p><a href="#">Playlist do curso!</a></p>
+    <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/epDCjksKMok" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <p><a href="https://www.youtube.com/watch?v=epDCjksKMok&list=PLHz_AreHm4dlAnJ_jJtV29RFxnPHDuk9o" target="_blank" rel="externol">Playlist do curso!</a></p>
     <a href="index.html" target="_self" rel="prev"><img src="imagens/voltar.png" alt="Voltar"></a>
 </body>
 </html>
