--- a/paginajs.html
+++ b/paginajs.html
@@ -20,9 +20,8 @@
 </head>
 <body>
     <h1>Curso De Javascript</h1>
-    <!--Video Do youtube-->
-    <img src="imagens/thumb-js.png" alt="Imagens do Curso">
-    <p><a href="#">Acessa a playlist!</a></p>
+    <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/1-w1RfGIov4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <p><a href="https://www.youtube.com/watch?v=1-w1RfGIov4&list=PLHz_AreHm4dlsK3Nr9GVvXCbpQyHQl1o1" target="_blank" rel="external">Acessa a playlist!</a></p>
     <a href="index.html" target="_self" rel="prev"><img src="imagens/voltar.png" alt="Voltar"></a>
 </body>
 </html>
