--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
         body{
             background-color: rgba(0, 0, 0, 0.734);
             color: blanchedalmond;
+            text-align: center;
+            font-size: 1.2em;
          }
         a{
             color: rgb(245, 226, 197);
