--- a/paginajs.html
+++ b/paginajs.html
@@ -9,6 +9,8 @@
     <style>
         body{
             background-color: rgba(0, 0, 0, 0.734);
+            text-align: center;
+            font-size: 1.2em;
             }
         h1{
             color: blanchedalmond;
