--- a/paginahtml.html
+++ b/paginahtml.html
@@ -6,19 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Curso de HTML E CSS</title>
     <link rel="shortcut icon" href="imagens/favicon.ico" type="image/favicon-icon">
-    <style>
-        body{
-            background-color: rgba(0, 0, 0, 0.734);
-            text-align: center;
-            font-size: 1.2em;
-            }
-        h1{
-            color: blanchedalmond;
-        }
-        a{
-            color: rgb(245, 226, 197);
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Curso de HTML e CSS</h1>
