--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
         <a href="paginajs.html" target="_self" rel="next"><img src="imagens/thumb-js.png" alt="Curso De javascipt"></a><br>
         <a href="paginahardware.html" target="_self" rel="next"><img src="imagens/thumb-hardware.png" alt="Curso de Hardware"></a>
         <a href="paginapython.html" target="_self" rel="next"><img src="imagens/thumb-python.png" alt="Curso de python"></a>
+    </picture>       
         <p>Acesse o Canal dos Curso!</p>
         <p><a href="https://www.youtube.com/user/cursosemvideo" target="_blank" rel="external">Curso Em Video...</a></p>
-    </picture>   
+    <p><a href="https://www.github.com/henriquemart" target="_blank" rel="external">Veja outro projetos!</a></p>
 </body>
 </html>
