--- a/index.html
+++ b/index.html
@@ -19,5 +19,9 @@
         <p>Acesse o Canal dos Curso!</p>
         <p><a href="https://www.youtube.com/user/cursosemvideo" target="_blank" rel="external">Curso Em Video...</a></p>
     <p><a href="https://www.github.com/henriquemart" target="_blank" rel="external">Veja outro projetos!</a></p>
+    <script>
+        /* var usuario = window.prompt('Qual e o Seu nome? ')
+        document.writeln('BEM VINDO ', usuario.toLocaleUpperCase(), ' !')*/
+    </script>
 </body>
 </html>
